# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2011-01-02  Christian Heller  <christian.heller@tuxtax.de>
        * Distinguish four kinds of http request uri (no resource, absolute uri, authority form, absolute path)

2011-01-01  Christian Heller  <christian.heller@tuxtax.de>
        * Implement decoding of percent-encoded ASCII character arrays
        * Change copyright year to 2011 in all CYBOI source code files
        * Prepare distinction of request uri types (server "*", absolute, authority, path)

2010-12-31  Christian Heller  <christian.heller@tuxtax.de>
        * Figure out problem with uri handling (percent-decoding missing)

2010-12-30  Christian Heller  <christian.heller@tuxtax.de>
        * Continue uri handling

2010-12-29  Christian Heller  <christian.heller@tuxtax.de>
        * Continue uri handling

2010-12-28  Christian Heller  <christian.heller@tuxtax.de>
        * Continue uri authority handling

2010-12-27  Christian Heller  <christian.heller@tuxtax.de>
        * Replace "process" functions with "decode" functions
        * Replace "evaluate" functions with "select" functions

2010-12-23  Christian Heller  <christian.heller@tuxtax.de>
        * Replace "process" functions with "decode" functions
        * Factor out many functions into their own specific files

2010-12-20  Christian Heller  <christian.heller@tuxtax.de>
        * Investigate container classes of Java Class Framework
            (e.g. Collections, Maps, MutableTreeNode)
            in order to identify groups of necessary container functions
        * Store these functions in file "todo_cyboi_java_comparison.txt"
