@@ -38,10 +38,21 @@ static wchar_t ABSOLUTE_URI_HTTP_REQUEST_URI_NAME_ARRAY[] = {0x003A, 0x002F, 0x0
 static wchar_t* ABSOLUTE_URI_HTTP_REQUEST_URI_NAME = ABSOLUTE_URI_HTTP_REQUEST_URI_NAME_ARRAY;
 static int* ABSOLUTE_URI_HTTP_REQUEST_URI_NAME_COUNT = NUMBER_3_INTEGER_MEMORY_MODEL_ARRAY;
 
-/** The authority form (solidus, solidus) http request uri name. */
-static wchar_t AUTHORITY_FORM_HTTP_REQUEST_URI_NAME_ARRAY[] = {0x002F, 0x002F};
-static wchar_t* AUTHORITY_FORM_HTTP_REQUEST_URI_NAME = AUTHORITY_FORM_HTTP_REQUEST_URI_NAME_ARRAY;
-static int* AUTHORITY_FORM_HTTP_REQUEST_URI_NAME_COUNT = NUMBER_2_INTEGER_MEMORY_MODEL_ARRAY;
+/**
+ * The authority form (colon) http request uri name.
+ *
+ * The sequence (solidus, solidus) is NOT used for detection,
+ * since an authority in an http request uri always has to be
+ * specified TOGETHER with a port number, separated by a colon.
+ * Therefore, the colon in host:port is looked for.
+ *
+ * The fact that an absolute uri contains a colon behind the scheme
+ * is not a problem, since the absolute uri detection is done first.
+ * That is, the authority form detection is done only if the uri
+ * is not an absolute uri.
+ */
+static wchar_t* AUTHORITY_FORM_HTTP_REQUEST_URI_NAME = COLON_UNICODE_CHARACTER_CODE_MODEL_ARRAY;
+static int* AUTHORITY_FORM_HTTP_REQUEST_URI_NAME_COUNT = NUMBER_1_INTEGER_MEMORY_MODEL_ARRAY;
 
 /** The absolute path (solidus) http request uri name. */
 static wchar_t* ABSOLUTE_PATH_HTTP_REQUEST_URI_NAME = SOLIDUS_UNICODE_CHARACTER_CODE_MODEL_ARRAY;
