@@ -37,14 +37,21 @@
 static wchar_t* SCHEME_END_SEPARATOR_URI_NAME = COLON_UNICODE_CHARACTER_CODE_MODEL_ARRAY;
 static int* SCHEME_END_SEPARATOR_URI_NAME_COUNT = NUMBER_1_INTEGER_MEMORY_MODEL_ARRAY;
 
+/** The scheme with authority (colon, solidus, solidus) separator uri name. */
+static wchar_t SCHEME_WITH_AUTHORITY_SEPARATOR_URI_NAME_ARRAY[] = {0x003A, 0x002F, 0x002F};
+static wchar_t* SCHEME_WITH_AUTHORITY_SEPARATOR_URI_NAME = SCHEME_WITH_AUTHORITY_SEPARATOR_URI_NAME_ARRAY;
+static int* SCHEME_WITH_AUTHORITY_SEPARATOR_URI_NAME_COUNT = NUMBER_3_INTEGER_MEMORY_MODEL_ARRAY;
+
 //
 // Authority.
 //
 
 /** The authority begin (solidus, solidus) separator uri name. */
+/*??
 static wchar_t AUTHORITY_BEGIN_SEPARATOR_URI_NAME_ARRAY[] = {0x002F, 0x002F};
 static wchar_t* AUTHORITY_BEGIN_SEPARATOR_URI_NAME = AUTHORITY_BEGIN_SEPARATOR_URI_NAME_ARRAY;
 static int* AUTHORITY_BEGIN_SEPARATOR_URI_NAME_COUNT = NUMBER_2_INTEGER_MEMORY_MODEL_ARRAY;
+*/
 
 //
 // Path.
