@@ -68,8 +68,6 @@ void decode_uri_scheme(void* p0, void* p1, void* p2, void* p3, void* p4, void* p
             // The break flag.
             int b = *NUMBER_0_INTEGER_MEMORY_MODEL;
 
-    fwprintf(stdout, L"TEST uri 0: %ls\n", (wchar_t*) *pos);
-
             while (*NUMBER_1_INTEGER_MEMORY_MODEL) {
 
                 if (*rem <= *NUMBER_0_INTEGER_MEMORY_MODEL) {
@@ -79,11 +77,7 @@ void decode_uri_scheme(void* p0, void* p1, void* p2, void* p3, void* p4, void* p
 
                 select_uri_scheme(p0, p1, p2, p3, p4, p5, (void*) &b, p6, p7);
 
-    fwprintf(stdout, L"TEST uri 1: %ls\n", (wchar_t*) *pos);
-
                 if (b != *NUMBER_0_INTEGER_MEMORY_MODEL) {
-
-    fwprintf(stdout, L"TEST uri 2: %ls\n", (wchar_t*) *pos);
 
                     // Add scheme as full text string.
                     append_part(p0, p1, p2,
@@ -99,8 +93,6 @@ void decode_uri_scheme(void* p0, void* p1, void* p2, void* p3, void* p4, void* p
                     ec++;
                 }
             }
-
-    fwprintf(stdout, L"TEST uri 3: %ls\n", (wchar_t*) *pos);
 
             // Decode uri depending on given scheme (http, ftp etc.).
             select_uri(p0, p1, p2, p3, p4, p5, p6, p7, e, (void*) &ec);
