@@ -11,9 +11,6 @@
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
 
-        * CONTINUE uri processing; parts are not added yet to destination uri compound
-            --> double slash at beginning of authority is not sufficient;
-                think about better way to detect authority form uri
         * Possibly, the file "model_diagram_encoder.c" does not properly
             generate meta properties with "compound" abstraction
             --> check comparison with tree level in model_diagram functions,
